# PlaystoreReviewer

./: .gitignore  README.md  app.py  config.py  pyproject.toml  review_scraper.py  scheduler.py  sheets_manager.py
